--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Executables/Fishdew.exe"
+export_path="../Executables/Fishdew3.0.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -18,7 +18,7 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=false
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -32,13 +32,13 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
+application/icon="res://assets/icon/Fishdew.ico"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name=""
+application/product_name="Fishdew"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
